--- a/index.html
+++ b/index.html
@@ -1,124 +1,127 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <title>🇲🇾马来西亚赛马直播中🔴 MALAYSIA HORSE RACING 🔴LIVE NOW</title>
+<meta charset="UTF-8">
+<title>🇲🇾馬來西亞賽馬直播中 🔴 Malaysia Horse Racing LIVE</title>
 
-  <!-- 自動更新預覽圖（避免快取） -->
-  <script>
-    const timestamp = new Date().getTime();
-    document.write(`
-      <meta property="og:image" content="https://89092702a-code.github.io/cm2-live/livebanner.jpg?${timestamp}">
-    `);
-  </script>
+<!-- 防快取 OG 圖 -->
+<script>
+const timestamp = new Date().getTime();
+document.write(`
+<meta property="og:image" content="https://horseracingallin1.github.io/horseracinglive/livebanner.jpg?${timestamp}">
+`);
+</script>
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:title" content="🇲🇾马来西亚赛马直播中🔴 MALAYSIA HORSE RACING 🔴LIVE NOW">
-  <meta property="og:description" content="立即進入 Telegram 觀看 CM2 馬來西亞賽馬直播，掌握即時賽況與分析！">
-  <meta property="og:url" content="https://89092702a-code.github.io/cm2-live/">
-  <meta property="og:type" content="website">
-  <meta name="twitter:card" content="summary_large_image">
+<!-- Open Graph -->
+<meta property="og:title" content="🇲🇾馬來西亞賽馬直播中 🔴 Malaysia Horse Racing LIVE">
+<meta property="og:description" content="立即進入 Telegram | Watch Malaysia Horse Racing Live & Analysis">
+<meta property="og:url" content="https://horseracingallin1.github.io/horseracinglive/">
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary_large_image">
 
-  <style>
-    body {
-      font-family: "Noto Sans TC", sans-serif;
-      text-align: center;
-      background: #000;
-      color: #fff;
-      margin: 0;
-      padding: 40px 10px;
-    }
+<style>
+body{
+font-family:"Noto Sans TC",sans-serif;
+text-align:center;
+background:#000;
+color:#fff;
+margin:0;
+padding:40px 10px;
+}
 
-    h1 {
-      font-size: 1.9rem;
-      margin-bottom: 6px;
-      color: #ffd700;
-    }
+h1{
+font-size:1.9rem;
+margin-bottom:6px;
+color:#ffd700;
+}
 
-    .subtitle {
-      font-size: 1.1rem;
-      font-weight: bold;
-      color: #ff4444;
-      letter-spacing: 2px;
-      margin-bottom: 16px;
-    }
+.subtitle{
+font-size:1.1rem;
+font-weight:bold;
+color:#ff4444;
+letter-spacing:1.5px;
+margin-bottom:16px;
+}
 
-    .live-dot {
-      display: inline-block;
-      width: 12px;
-      height: 12px;
-      background: red;
-      border-radius: 50%;
-      margin: 0 6px;
-      animation: blink 1s infinite;
-    }
+.live-dot{
+ display:inline-block;
+ width:12px;
+ height:12px;
+ background:red;
+ border-radius:50%;
+ margin:0 6px;
+ animation:blink 1s infinite;
+}
 
-    .live-text {
-      color: #ff3333;
-      font-weight: bold;
-      letter-spacing: 1px;
-    }
+.live-text{
+ color:#ff3333;
+ font-weight:bold;
+ letter-spacing:1px;
+}
 
-    @keyframes blink {
-      0% { opacity: 1; }
-      50% { opacity: 0.2; }
-      100% { opacity: 1; }
-    }
+@keyframes blink{
+0%{opacity:1;}
+50%{opacity:0.2;}
+100%{opacity:1;}
+}
 
-    img {
-      width: 95%;
-      max-width: 750px;
-      border-radius: 14px;
-      box-shadow: 0 0 25px rgba(255,255,255,0.25);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
+img{
+ width:95%;
+ max-width:750px;
+ border-radius:14px;
+ box-shadow:0 0 25px rgba(255,255,255,0.25);
+ transition:transform .3s ease, box-shadow .3s ease;
+}
 
-    img:hover {
-      transform: scale(1.02);
-      box-shadow: 0 0 40px rgba(255,255,255,0.4);
-    }
+img:hover{
+ transform:scale(1.02);
+ box-shadow:0 0 40px rgba(255,255,255,0.4);
+}
 
-    footer {
-      margin-top: 40px;
-      font-size: 0.9rem;
-      opacity: 0.6;
-    }
-  </style>
+footer{
+ margin-top:40px;
+ font-size:.9rem;
+ opacity:.6;
+}
+</style>
 </head>
 
 <body>
 
-  <h1>
-    🎥 马来西亚赛马直播中
-    <span class="live-dot"></span>
-    <span class="live-text">LIVE</span>
-  </h1>
+<h1>
+🎥 馬來西亞賽馬直播中
+<span class="live-dot"></span>
+<span class="live-text">LIVE</span>
+</h1>
 
-  <!-- 页面内赛事名称 -->
-  <div class="subtitle">
-    MALAYSIA HORSE RACING
-  </div>
+<div class="subtitle">
+Malaysia Horse Racing · Live Streaming
+</div>
 
-  <p>立即加入 Telegram，觀看馬來西亞現場賽馬與即時分析！</p>
+<p>
+立即加入 Telegram<br>
+<span style="opacity:.85;">Watch Live Horse Racing & Real-time Analysis</span>
+</p>
 
-  <a href="https://t.me/cm2bethorseracing?livestream" target="_blank">
-    <img src="livebanner.jpg" alt="MALAYSIA HORSE RACING LIVE">
-  </a>
+<a href="https://t.me/horseracingallin1?livestream" target="_blank">
+<img src="livebanner.jpg" alt="Malaysia Horse Racing Live">
+</a>
 
-  <footer>© 2025 CM2 Live Horse Racing</footer>
+<footer>
+© 2026 Horse Racing Live · 赛马畀你知
+</footer>
 
-  <script>
-    /* 瀏覽器 Title 閃爍 */
-    const titles = [
-      "🇲🇾马来西亚赛马直播中🔴 MALAYSIA HORSE RACING 🔴LIVE NOW",
-      "🏇 正在直播｜點擊進入 Telegram"
-    ];
-    let i = 0;
-    setInterval(() => {
-      document.title = titles[i % titles.length];
-      i++;
-    }, 1200);
-  </script>
+<script>
+const titles=[
+"🇲🇾馬來西亞賽馬直播中 🔴 Malaysia Horse Racing LIVE",
+"🏇 Live Now｜Join Telegram 觀看直播"
+];
+let i=0;
+setInterval(()=>{
+document.title=titles[i%titles.length];
+i++;
+},1200);
+</script>
 
 </body>
 </html>
